--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,4 @@
-version: "3.8"
-
 services:
-  db:
-    image: postgres:13
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-    ports:
-      - "5432:5432"
-
   backend:
     build:
       context: ./backend
@@ -19,20 +6,20 @@ services:
     volumes:
       - ./backend:/app
     ports:
-      - "8080:8080"
-    depends_on:
-      - db
+      - "5001:5001"
     environment:
-      DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
+      PORT: 5001
 
   web:
     build:
       context: ./web
       dockerfile: Dockerfile
+    volumes:
+      - ./web:/app
+      - /app/node_modules
     ports:
       - "3000:3000"
+    environment:
+      NEXT_PUBLIC_API_URL: http://localhost:5001
     depends_on:
       - backend
-
-volumes:
-  postgres_data:
