--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -3,9 +3,6 @@ FROM node:18
 WORKDIR /usr/src/app
 COPY package*.json ./
 RUN npm install
-COPY ./src ./src
-COPY ./tsconfig.json .
-RUN npm run build
 EXPOSE 5001
-CMD ["npm", "start"]
+CMD ["npm", "run", "dev"]
 
