--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,25 @@
-FROM node:18
+FROM node:18-alpine AS builder
 
 WORKDIR /usr/src/app
 COPY package*.json ./
-RUN npm install
+RUN npm ci --only=production=false
 COPY ./src ./src
-COPY ./tsconfig.json .
+COPY ./tsconfig.json ./
 RUN npm run build
+
+FROM node:18-alpine
+
+WORKDIR /usr/src/app
+
+# 本番用の依存関係のみをインストール
+COPY package*.json ./
+RUN npm ci --only=production && npm cache clean --force
+
+# ビルド済みファイルと必要なファイルをコピー
+COPY --from=builder /usr/src/app/dist ./dist
+COPY --from=builder /usr/src/app/audio ./audio
+
 EXPOSE 5001
+
 CMD ["npm", "start"]
 
