--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "prepare": "husky install",
     "build": "tsc",
-    "start": "node -r tsconfig-paths/register dist/server.js",
+    "start": "node -r tsconfig-paths/register dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only --no-notify --exit-child -r tsconfig-paths/register src/index.ts",
     "lint": "eslint . --ext .ts --fix",
     "format": "prettier --write .",
