--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,11 +1,32 @@
-FROM node:20-slim
+FROM node:20-alpine AS builder
 
 WORKDIR /app
 
-COPY package*.json ./
-
-RUN yarn install
+COPY package*.json yarn.lock ./
+RUN yarn install --frozen-lockfile
 
 COPY . .
+RUN yarn build
 
-CMD ["yarn", "dev"]
+FROM node:20-alpine AS runner
+
+WORKDIR /app
+
+ENV NODE_ENV production
+
+# 本番用の依存関係のみをインストール
+COPY package*.json yarn.lock ./
+RUN yarn install --frozen-lockfile --production && yarn cache clean
+
+# ビルド済みファイルをコピー
+COPY --from=builder /app/.next ./.next
+COPY --from=builder /app/public ./public
+COPY --from=builder /app/next.config.mjs ./
+COPY --from=builder /app/package.json ./
+
+EXPOSE 3000
+
+ENV PORT 3000
+ENV HOSTNAME "0.0.0.0"
+
+CMD ["yarn", "start"]
