--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "prepare": "husky install",
-    "build": "tsc",
-    "start": "node -r tsconfig-paths/register dist/index.js",
+    "prepare": "node -e \"try { require('husky').install() } catch (e) {}\"",
+    "build": "tsc && tsc-alias",
+    "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only --no-notify --exit-child -r tsconfig-paths/register src/index.ts",
     "lint": "eslint . --ext .ts --fix",
     "format": "prettier --write .",
@@ -30,7 +30,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "husky": "^9.1.7",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.20"
@@ -58,6 +57,7 @@
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
+    "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.2"
   },
